# FastAPI-Template

./: .gitignore  notebook.ipynb  pyproject.toml
scripts/: md_cases_to_json.py
src/api/v1/base/: base.py
